hphp/hack/test/typecheck/references/superglobals_by_ref.php.exp
File "superglobals_by_ref.php", line 5, characters 9-9:
An expression is expected here. (Parsing[1002])
