hphp/hack/test/typecheck/references/superglobals_by_ref.php
<?hh // partial


function superglobals_by_ref(): void {
  $_ = &$_SERVER;
}
